# speedhive-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_CLIENT.md  RELEASE_TRIGGER.txt  mylaps_client_wrapper.py  mylaps_live_client.py  pyproject.toml  setup.cfg  speedhive  speedhive_client.py  speedhive_example_runner.py
.github/workflows/: publish.yml
examples/: api_usage_demo.py  basic.py  basic2.py  debug_events.py  dump_speedhive_database_streaming.py  event_sessions.py  event_with_sessions.py  example_championships.py  example_get_event_sessions.py  example_get_events.py  example_get_lap_chart.py  example_get_organization.py  example_get_session_announcements.py  example_get_session_laps.py  example_get_session_results.py  example_get_summer_events.py  example_runner.py  example_server_time.py  example_stream_announcements.py  example_stream_laps.py  example_stream_race_laps.py  example_track_records.py  export_announcements.py  export_announcements_by_org.py  export_full_dump.py  extract_session_lapdata.py  extract_track_records.py  get_event_sessions.py  get_records_example.py  get_session_laps.py  get_session_results.py  list_event_ops.py  list_event_sessions.py  parse_announcements.py  process_full_dump.py  sessions.py
examples/fun/: consistency_by_driver.py  enrich_driver_names.py  extract_driver_laps.py  report_driver_consistency.py  report_top_bottom_consistency.py
examples/live_streamer/: README.md  find_live_orgs.py  stream_laps.py
examples/processing/: README_PROCESSING.md  extract_announcements_to_csv.py
speedhive_tools/: __init__.py  auth.py  cli.py  client.py  models.py  utils.py
speedhive_tools/analyzers/: __init__.py  driver_laps.py  get_fastest_records.py  report_driver_consistency.py  report_top_bottom_consistency.py
speedhive_tools/exporters/: __init__.py  export_announcements.py  export_championships.py  export_events.py  export_full_dump.py  export_lap_chart.py  export_laps.py  export_results.py  export_sessions.py  export_track_records.py
speedhive_tools/processors/: extract_announcements_to_csv.py  extract_events_to_csv.py  extract_laps_to_csv.py  extract_sessions_to_csv.py  extract_track_records_to_csv.py  ndjson_to_sqlite.py  process_full_dump.py
speedhive_tools/utils/: __init__.py  common.py  export_utils.py  track_records.py
src/speedhive/: __init__.py  client.py  core.py  curation.py  errors.py  llm.py  ndjson.py  settings.py  storage.py  wrapper.py
src/speedhive/analyzers/: driver_laps.py  (+7 more)
src/speedhive_tools/: __init__.py  client.py  config.py  speedhive.py
tests/: conftest.py  test_class_pace.py  test_cli.py  test_cli_help.py  test_client.py  test_common_utils.py  test_consistency_improvement.py  test_curation.py  test_driver_directory.py  test_examples_imports.py  test_examples_scripts.py  test_export_db_dump.py  test_export_lap_records.py  test_extract_announcements.py  test_import.py  test_live_streamer_demo.py  test_llm.py  test_outliers.py  test_package_imports.py  test_processing.py  test_processing_extractors.py  test_settings.py  test_speedhive_client.py  test_track_records.py  test_wins_podiums.py  test_wrapper.py
(+43 files in other folders)
