
[project]
name = "speedhive-tools"
version = "0.1.0"
description = "Thin ergonomic wrappers for the Speedhive generated client"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27","pydantic>=2.6","tenacity>=8.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
